# block_storage_device

./: .gitignore  CMakeLists.txt  README.md
include/: block_store.h
src/: block_store.c
test/: tests.cpp
